# PollRush

./: Cargo.toml  README.md  canister_ids.json  deploy-frontend-standalone.sh  deploy.sh  dfx.json
backend/: Cargo.toml  dfx.json
backend/pollrush/: Cargo.toml  pollrush.did
backend/pollrush/src/: lib.rs  pollrush.did  pollrush.rs
backend/pps_token/: Cargo.toml
backend/pps_token/src/: lib.rs  pps_token.did
backend/src/: lib.rs  pps_token.rs
frontend/: index.html  package.json  tsconfig.json  tsconfig.node.json  vite-plugin-did.ts  vite.config.ts
frontend/src/: App.tsx  env.d.ts  index.css  theme.ts  vite-env.d.ts
frontend/src/components/: ConfirmDialog.tsx  CountdownTimer.tsx  CreatePoll.tsx  ErrorMessage.tsx  Footer.tsx  LoadingOverlay.tsx  LoadingSpinner.tsx  Navbar.tsx  NoData.tsx  NotificationBanner.tsx  PageHeader.tsx  Pagination.tsx  PollAnalytics.tsx  PollBookmark.tsx  PollCard.tsx  PollCategories.tsx  PollComments.tsx  PollDetail.tsx  PollEmbed.tsx  PollExport.tsx  PollFilter.tsx  PollFilters.tsx  PollFooter.tsx  PollForm.tsx  PollHeader.tsx  PollHistory.tsx  PollImport.tsx  PollList.tsx  PollModeration.tsx  PollNotifications.tsx  PollOption.tsx  PollPagination.tsx  PollParticipants.tsx  PollReport.tsx  PollResults.tsx  PollRewards.tsx  PollSchedule.tsx  PollSearch.tsx  PollSettings.tsx  PollShare.tsx  (+21 more)
frontend/src/config/: constants.ts  env.ts  index.ts
frontend/src/contexts/: PollContext.tsx  WalletContext.tsx
frontend/src/hooks/: useDebounce.ts  useWallet.ts
frontend/src/pages/: CreatePoll.tsx  Home.tsx  MyPolls.tsx  (+2 more)
scripts/: deploy.sh
(+13 files in other folders)
