[workspace]
members = [
    "pollrush",
    "pps_token"
]

[workspace.dependencies]
candid = "0.9.0"
ic-cdk = "0.10.0"
ic-cdk-timers = "0.5.0"
ic-stable-structures = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
opt-level = 3
codegen-units = 1

[workspace.package]
version = "0.1.0"
edition = "2021"
resolver = "2"